feat: 할인 후 예상 결제 금액 출력